# infra

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md  downstream-repos.json  flake.nix  justfile  metarepo.just  setup.sh  sync-files.json  ws.justfile
.doc/: CI.md
.github/actions/setup/: action.yml
.github/templates/: ci.yml
.github/workflows/: ci.yml  cleanup.yml  codecov.yml  downstream-ci.yml  downstream-codecov.yml  downstream-pipeline.yml  infra-lint.yml  infra-sync-downstream.yml  lint.yml
.zed/: settings.json
config/: Cargo.workspace.toml  config.toml
docs/bevy-best-practices/: bevy-conventions.md  bevy-error-handling.md  bevy-versioning.md  ci-and-tooling.md  workspace-conventions.md
just/: downstream-prelude.just  metarepo.just  shared.just
metarepo/: AGENTS.md
metarepo/.zed/: debug.json
scripts/: bevy-lint.sh  check.sh  ci.sh  play.py  play.sh  pyproject.toml  pyrightconfig.json  ra-check.sh  wt.sh
scripts/assets/: justfile
scripts/src/qproj_scripts/: __init__.py  __main__.py  _common.py  add.py  bevy_lint.py  build.py  check.py  ci.py  cli.py  clippy.py  coverage.py  deny.py  init.py  patch_cargo.py  play.py  prune.py  ra_check.py  sync.py  sync.sh  target.py  test.py
scripts/src/qproj_scripts/assets/.config/: AGENTS.md  Cargo.toml  justfile  pyrightconfig.json
scripts/src/qproj_scripts/assets/.config/.zed/: settings.json
scripts/src/qproj_scripts/assets/.zed/: settings.json
scripts/src/qproj_scripts/assets/project-template/: Cargo.toml  README.md
scripts/src/qproj_scripts/assets/project-template/src/: lib.rs
scripts/tests/: test_play_behavior.py
