[workspace]
members = [
  "quell/active",
  "q_screens/active",
  "q_term/active",
  "q_test_harness/active",
]
resolver = "3"

[workspace.lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = ["cfg(bevy_lint)"] }
clippy.too_many_arguments = "allow"
clippy.type_complexity = "allow"
clippy.nonstandard_macro_braces = "warn"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
