[workspace]
members = [
  "quell/active",
  "q_screens/active",
  "q_term/active",
  "q_test_harness/active",
]
resolver = "3"

[workspace.lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = ["cfg(bevy_lint)"] }
clippy.too_many_arguments = "allow"
clippy.type_complexity = "allow"
clippy.nonstandard_macro_braces = "warn"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[patch."https://github.com/cubething-qproj/q_screens"]
q_screens = { path = "q_screens/active" }

[patch."https://github.com/cubething-qproj/q_test_harness"]
q_test_harness = { path = "q_test_harness/active" }

[patch."https://github.com/cubething-qproj/q_term"]
q_term = { path = "q_term/active" }

[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
