[project]
name = "qproj-scripts"
version = "0.1.0"
description = "Unified CLI wrapping the cubething-qproj infra task scripts."
requires-python = ">=3.14"
dependencies = [
    "tomlkit>=0.13",
    "typer>=0.12",
]

[project.scripts]
qproj-scripts = "qproj_scripts.cli:app"

[dependency-groups]
dev = [
    "basedpyright>=1.20",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qproj_scripts"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    # Typer's API requires `typer.Argument(...)` / `typer.Option(...)` calls
    # in parameter defaults. Suppress globally rather than scattering noqas.
    "B008",
]

[tool.ruff.format]
quote-style = "double"
