[package]
name = "{{name}}"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cubething-qproj/{{name}}"

[dependencies]
bevy = "0.18"
tiny_bail = "0.7"

[lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = ["cfg(bevy_lint)"] }
clippy.too_many_arguments = "allow"
clippy.type_complexity = "allow"
clippy.nonstandard_macro_braces = "warn"
